# accelerated-bn-cryptography

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile.toml  README.md
.cargo/: audit.toml
.github/workflows/: CI-ci-remote.yml
curves/bn254/: Cargo.toml  build.rs
curves/bn254/src/: lib.rs
curves/bn254/src/base_impl/: mod.rs
curves/bn254/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/models/: mod.rs
models/src/models/bn/: g1.rs  g2.rs  mod.rs
scripts/: add_header_if_missing.sh
test-utils/: Cargo.toml
test-utils/src/: lib.rs
