[workspace]
members = [
  "curves/bn254",
  "models",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["Horizen Labs <admin@horizenlabs.io>"]
repository = "https://github.com/zkVerify/accelerated-bn-cryptography"
homepage = "https://horizenlabs.io"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.dependencies]
ark-algebra-test-templates = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-models-ext = { path = "./models", version = "0.6.0", default-features = false }
ark-scale = { version = "0.0.13", default-features = false, features = ["hazmat"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.5.0", default-features = false }
educe = { version = "0.6.0", default-features = false }
num-traits = { version = "0.2", default-features = false }